[gd_scene load_steps=6 format=3 uid="uid://b2wlc7vk11h4w"]

[ext_resource type="Script" path="res://addons/godot_vn/vn_editor/vn_graph_editor.gd" id="1_qgyff"]
[ext_resource type="PackedScene" uid="uid://bedaqdcy6qtb1" path="res://addons/godot_vn/vn_editor/DialogPopUp.tscn" id="2_hx43m"]
[ext_resource type="PackedScene" uid="uid://ddvx4ixpobcii" path="res://addons/godot_vn/vn_editor/DecisionPopUp.tscn" id="3_kbqkc"]
[ext_resource type="Script" path="res://addons/godot_vn/vn_editor/debug_runner.gd" id="3_m802e"]
[ext_resource type="PackedScene" uid="uid://bavcst8iplh5h" path="res://addons/godot_vn/vn_editor/InputPopUp.tscn" id="4_oucfa"]

[node name="VnGraphEditor" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScreenContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ButtonPanelContainer" type="HBoxContainer" parent="ScreenContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Reset"

[node name="ExportButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Export"

[node name="LoadButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Load"

[node name="VSeparator" type="VSeparator" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2

[node name="NodeStartButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Start"

[node name="NodeEndButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "End
"

[node name="NodeDialogueButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Dialogue"

[node name="NodeInputButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Input"

[node name="NodeDecisionButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Decision"

[node name="NodeVariableButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Variable"

[node name="NodeConditionButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Condition
"

[node name="NodeSignalButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Signal"

[node name="NodeGoToButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "GoTo"

[node name="NodeNotesButton" type="Button" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2
focus_mode = 0
text = "Notes"

[node name="VSeparator2" type="VSeparator" parent="ScreenContainer/ButtonPanelContainer"]
layout_mode = 2

[node name="MoreButton" type="MenuButton" parent="ScreenContainer/ButtonPanelContainer"]
visible = false
layout_mode = 2
text = "More"

[node name="MarginContainer" type="MarginContainer" parent="ScreenContainer/ButtonPanelContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ScreenContainer/ButtonPanelContainer/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Version 0.1.0"

[node name="MarginContainer" type="MarginContainer" parent="ScreenContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="ScreenContainer/MarginContainer" node_paths=PackedStringArray("exportMenu", "loadMenu")]
layout_mode = 2
snapping_enabled = false
right_disconnects = true
connection_lines_curvature = 1.0
script = ExtResource("1_qgyff")
exportMenu = NodePath("../../../ExportDialog")
loadMenu = NodePath("../../../OpenDialog")

[node name="VersionContainer" type="HBoxContainer" parent="ScreenContainer"]
layout_mode = 2
alignment = 2

[node name="ExportDialog" type="FileDialog" parent="."]
title = "Export VN Graph"
position = Vector2i(375, 100)
size = Vector2i(550, 550)
exclusive = false
popup_window = true
ok_button_text = "Save"
filters = PackedStringArray("*.gdvn.tres ; Godot VisualNovel")

[node name="OpenDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(375, 100)
size = Vector2i(550, 550)
exclusive = false
popup_window = true
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.gdvn.tres ; Godot VisualNovel")

[node name="DialogPopUp" parent="." instance=ExtResource("2_hx43m")]
visible = false

[node name="DecsionPopUp" parent="." instance=ExtResource("3_kbqkc")]
visible = false

[node name="InputPopUp" parent="." instance=ExtResource("4_oucfa")]
visible = false

[node name="DebugRunner" type="Node" parent="." node_paths=PackedStringArray("dialog_popup", "decision_popup", "input_popup")]
script = ExtResource("3_m802e")
dialog_popup = NodePath("../DialogPopUp")
decision_popup = NodePath("../DecsionPopUp")
input_popup = NodePath("../InputPopUp")

[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/ResetButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_reset_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/ExportButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_export_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/LoadButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_load_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeStartButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_start_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeEndButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_end_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeDialogueButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_dialogue_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeInputButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_input_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeDecisionButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_decision_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeVariableButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_variable_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeConditionButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_condition_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeSignalButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_signal_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeGoToButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_goto_button_pressed"]
[connection signal="pressed" from="ScreenContainer/ButtonPanelContainer/NodeNotesButton" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_notes_button_pressed"]
[connection signal="connection_request" from="ScreenContainer/MarginContainer/GraphEdit" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_connection_request"]
[connection signal="copy_nodes_request" from="ScreenContainer/MarginContainer/GraphEdit" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_copy_nodes_request"]
[connection signal="delete_nodes_request" from="ScreenContainer/MarginContainer/GraphEdit" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="ScreenContainer/MarginContainer/GraphEdit" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_disconnection_request"]
[connection signal="node_deselected" from="ScreenContainer/MarginContainer/GraphEdit" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_deselected"]
[connection signal="node_selected" from="ScreenContainer/MarginContainer/GraphEdit" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_node_selected"]
[connection signal="paste_nodes_request" from="ScreenContainer/MarginContainer/GraphEdit" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_paste_nodes_request"]
[connection signal="start_debug" from="ScreenContainer/MarginContainer/GraphEdit" to="DebugRunner" method="_on_graph_edit_start_debug"]
[connection signal="file_selected" from="ExportDialog" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_export_dialog_file_selected"]
[connection signal="file_selected" from="OpenDialog" to="ScreenContainer/MarginContainer/GraphEdit" method="_on_open_dialog_file_selected"]
[connection signal="dialog_next" from="DialogPopUp" to="DebugRunner" method="_on_dialog_pop_up_dialog_next"]
[connection signal="decision_made" from="DecsionPopUp" to="DebugRunner" method="_on_decsion_pop_up_decision_made"]
[connection signal="recieved_input" from="InputPopUp" to="DebugRunner" method="_on_input_pop_up_recieved_input"]
